--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <body>
-    Cica 2
+    <div>JULCSI the BEST</div>
     <hr>
+    <style>
+        div { 
+            background-color: rgb(144, 115, 172);
+            border-radius: 6px;
+            box-shadow: 1px 1px 3px burlywood;
+            width: 80px;
+            margin: 10px;
+            padding: 20px;
+
+        }
+        
+    </style>
 </body>
+      
