--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <hr>
     <style>
         div { 
-            background-color: rgb(144, 115, 172);
+            background-color: rgb(229, 149, 231);
             border-radius: 6px;
-            box-shadow: 1px 1px 3px burlywood;
-            width: 80px;
+            box-shadow: 1px 1px 3px rgb(105, 200, 207);
+            width: 160px;
             margin: 10px;
             padding: 20px;
 
@@ -14,4 +14,3 @@
         
     </style>
 </body>
-      
