--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <body>
     <div>JULCSI the BEST</div>
+    <div>ez a legjobb weboldal</div>
     <hr>
     <style>
         div { 
-            background-color: rgb(229, 149, 231);
+            background-color: rgb(151, 139, 192);
             border-radius: 6px;
-            box-shadow: 1px 1px 3px rgb(105, 200, 207);
-            width: 160px;
+            box-shadow: 1px 1px 3px rgb(164, 219, 223);
+            width: 120px;
             margin: 10px;
             padding: 20px;
 
